Fix overflow in homepage

--- a/src/styles/components/_categories-card.scss
+++ b/src/styles/components/_categories-card.scss
@@ -37,7 +37,7 @@
 
   &__description {
     margin-block: $space-sm 0;
-    white-space: nowrap;
+    white-space: wrap;
   }
 
   &__label {
