--- a/src/styles/components/_header-actions.scss
+++ b/src/styles/components/_header-actions.scss
@@ -5,4 +5,5 @@
   display: flex;
   gap: $gap-sm;
   align-items: center;
+  flex-wrap: wrap;
 }
