--- a/src/styles/components/_main-nav.scss
+++ b/src/styles/components/_main-nav.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     padding-inline: $space-0;
     gap: $gap-sm;
+    margin-block: 0;
 
     @include tablet {
       display: flex;
