--- a/src/styles/layouts/_trending.scss
+++ b/src/styles/layouts/_trending.scss
@@ -13,7 +13,6 @@
   }
   &__secondary-title {
     margin-block: $space-0;
-    white-space: nowrap;
   }
 
   &__header {
